--- a/framework/source/resource/qx/mobile/css/indigo.css
+++ b/framework/source/resource/qx/mobile/css/indigo.css
@@ -592,6 +592,13 @@ li:first-child:not(.formRowGroupFirstItem), li:first-child a {
 .menu {
   min-width: 200px; }
 
+.menu .list {
+  border: none !important;
+  background: none; }
+
+.menu .list .list-item {
+  background: none; }
+
 .navigationbar {
   height: 45px;
   padding-left: 10px;
