--- a/framework/source/resource/qx/mobile/css/ios.css
+++ b/framework/source/resource/qx/mobile/css/ios.css
@@ -533,6 +533,13 @@ li:first-child:not(.formRowGroupFirstItem), li:first-child a {
 .menu {
   min-width: 200px; }
 
+.menu .list {
+  border: none !important;
+  background: none; }
+
+.menu .list .list-item {
+  background: none; }
+
 .popup, .menu, .picker {
   -webkit-border-radius: 0.5em;
   -moz-border-radius: 0.5em;
