--- a/framework/source/resource/qx/mobile/scss/color/_android.scss
+++ b/framework/source/resource/qx/mobile/scss/color/_android.scss
@@ -550,6 +550,10 @@ $arrow-size: 12px;
   border: 1px solid $border-color;
 }
 
+.menu-scroller {
+  background-color: black;
+}
+
 //
 // MASTER DETAIL
 // 
